test/scc_test/decl/semantic-errors/033.t
enum A
{
    B
};

struct A
{
    int x;
};